[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Art/button_big_yellow.png" type="Texture" id=1]
[ext_resource path="res://Assets/Demo Art/Laptop.png" type="Texture" id=2]
[ext_resource path="res://Assets/Winkle-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/PopupActionCardChoice.gd" type="Script" id=4]
[ext_resource path="res://Assets/Art/button_big_blue_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/button_big_yellow_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/button_big_blue.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/IMG_0768.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Art/button_small_green.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/button_small_blue.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/button_small_yellow.png" type="Texture" id=11]
[ext_resource path="res://Assets/Wave 2/FloorHQ_Nugget1.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "popup_choiceObject"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 52
outline_size = 3
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
resource_name = "popupStickerBook"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.15, 0, 0, -0.95, 0, 0.5, 0 ),
"times": PoolRealArray( 0, 1.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("TextureRect:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.3 )
}

[node name="PopupActionCardChoice" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 0.32
anchor_bottom = 0.737
margin_right = -287.68
margin_bottom = -402.2
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = -17.0
margin_top = -340.0
margin_right = 434.0
margin_bottom = 1.0
rect_rotation = 90.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 0, 344 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/TextureRect"]
position = Vector2( 100, 166 )
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextureRect"]
margin_left = 203.0
margin_top = 300.0
margin_right = 481.0
margin_bottom = 541.0
rect_rotation = -90.0
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]The [b]Pride Flag[/b] represent the rights of all LGBTQIA+ people to be who they are.[/center]"
text = "The Pride Flag represent the rights of all LGBTQIA+ people to be who they are."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/popup_choiceObject = SubResource( 3 )

[node name="StickerBook" type="Control" parent="."]
show_behind_parent = true
margin_right = 207.0
margin_bottom = 72.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="StickerBook"]
margin_left = 880.0
margin_top = 340.0
margin_right = 1041.0
margin_bottom = 392.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StickerBook/TextureButton"]
margin_right = 159.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "stickers"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="StickerBook"]
margin_left = 11.0
margin_top = 11.0
margin_right = 1015.0
margin_bottom = 567.0
rect_min_size = Vector2( 10, 10 )
rect_scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorHqNugget1" type="Sprite" parent="StickerBook/TextureRect"]
position = Vector2( 492.509, 262.534 )
rotation = -1.5708
scale = Vector2( 0.158515, -0.279012 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="StickerBook/TextureRect"]
margin_left = 108.0
margin_top = 29.0
margin_right = 876.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Sticker Book:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="StickerBook/TextureRect"]
margin_left = -3.0
margin_top = 20.0
margin_right = 248.0
margin_bottom = 91.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StickerBook/TextureRect/TextureButton2"]
margin_right = 242.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stickers" type="Node2D" parent="StickerBook/TextureRect"]
position = Vector2( 70, 80 )

[node name="TextureRect" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 372.0
margin_right = 492.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 496.0
margin_right = 616.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 620.0
margin_right = 740.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 744.0
margin_right = 864.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 124.0
margin_top = 124.0
margin_right = 244.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 248.0
margin_top = 124.0
margin_right = 368.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 372.0
margin_top = 124.0
margin_right = 492.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 496.0
margin_top = 124.0
margin_right = 616.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect13" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 620.0
margin_top = 124.0
margin_right = 740.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect14" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 744.0
margin_top = 124.0
margin_right = 864.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect15" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_top = 248.0
margin_right = 120.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect16" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 124.0
margin_top = 248.0
margin_right = 244.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect17" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 248.0
margin_top = 248.0
margin_right = 368.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect18" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 372.0
margin_top = 248.0
margin_right = 492.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect19" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 496.0
margin_top = 248.0
margin_right = 616.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect20" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 620.0
margin_top = 248.0
margin_right = 740.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect21" type="TextureRect" parent="StickerBook/TextureRect/Stickers"]
margin_left = 744.0
margin_top = 248.0
margin_right = 864.0
margin_bottom = 368.0
rect_min_size = Vector2( 120, 120 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="StickerBook"]
anims/popupStickerBook = SubResource( 6 )
[connection signal="pressed" from="StickerBook/TextureButton" to="." method="_on_StickerBook_pressed"]
[connection signal="pressed" from="StickerBook/TextureRect/TextureButton2" to="." method="_on_StickerBook_Closed_pressed"]
